{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 17,
  "lineage": "02ba2860-c01c-a826-c82a-214c53c96e2a",
  "resources": [
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:591389222803:vpc/vpc-0b50bf7fc2b8cdaa5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e9d51b12a3eee728",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0d5086cdfede6897b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b50bf7fc2b8cdaa5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08ba1492b2ac0e569",
            "owner_id": "591389222803",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:591389222803:security-group/sg-0a25cf07e01387e3a",
            "description": "Allow inbound on 5173",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a25cf07e01387e3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              }
            ],
            "name": "CS6650HW8-sg",
            "name_prefix": "",
            "owner_id": "591389222803",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b50bf7fc2b8cdaa5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:591389222803:security-group/sg-0ae7bc875d26e8962",
            "description": "Allow MySQL access from ECS tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae7bc875d26e8962",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a25cf07e01387e3a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cs6650hw8-rds-sg",
            "name_prefix": "",
            "owner_id": "591389222803",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CS6650HW8-rds-sg"
            },
            "tags_all": {
              "Name": "CS6650HW8-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b50bf7fc2b8cdaa5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.this",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}